# PalindromeString-test

./: PalindromeString.cabal  README.md
src/: Main.hs  Solution.hs
test/unit-tests/: SolutionSpec.hs
